[package]
name = "philiprehberger-argon2-easy"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "Dead-simple password hashing with Argon2id — hash() and verify(), nothing more"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-argon2-easy"
documentation = "https://docs.rs/philiprehberger-argon2-easy"
keywords = ["password", "argon2", "hashing", "security", "auth"]
categories = ["cryptography"]

[dependencies]
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
