[package]
name = "philiprehberger-argon2-easy"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
authors = ["Philip Rehberger"]
description = "Dead-simple password hashing with Argon2id — hash() and verify(), nothing more"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-argon2-easy"
documentation = "https://docs.rs/philiprehberger-argon2-easy"
keywords = ["password", "argon2", "hashing", "security", "auth"]
categories = ["cryptography"]

[dependencies]
argon2 = { version = "0.6.0-rc.8", features = ["password-hash", "getrandom"] }
password-hash = "0.6"
